[#51278267] Fixing rt margin on mobile

--- a/source/stylesheets/_homepage.css.scss
+++ b/source/stylesheets/_homepage.css.scss
@@ -48,6 +48,7 @@
       margin-top: 20px;
     }
     @include breakpoint(mobile) {
+      width: 100%;
       font-size: 85px;
       padding: 0px 0px 0px 0px;
       text-align: center;
